Remove a bogus KASSERT from nd6_prefix_unlink().

The caller may unlink a prefix before purging referencing addresses. An
identical assertion in nd6_prefix_del() verifies that the addresses are
purged before the prefix is freed.

PR:		215372
X-MFC With:	r306829

Former-commit-id: f0534b6dc2cacee76f89633d09cb3de2d5def3e2